demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo
  namespace: demo-namespace
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
      - name: nginx
        image: public.ecr.aws/z9d2n7e1/nginx:1.19.5
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: demo
  labels:
    app: demo-app
spec:
  selector:
    app: demo-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
