eks-olive-components.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: eks-olive-components-netpol
  namespace: dev
spec:
  podSelector:
    matchLabels:
      app: eks-olive-components
  policyTypes:
  - Egress
  egress: []

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eks-olive-components
  namespace: dev
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: eks-olive-components
        tier: backend
    spec:
      containers:
      - name: eks-olive-components
        image: containers.mgmt.crosschx.com:5000/development/eks-olive-components:6.10.1-build177
        resources:
          requests:
            memory: 64Mi
            cpu: 50m
          limits:
            memory: 128Mi
            cpu: 200m
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /api/health/status
            port: 80
          initialDelaySeconds: 20
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /api/health/status
            port: 80
          initialDelaySeconds: 20
          periodSeconds: 20
      nodeSelector:
        environment: dev

---
apiVersion: v1
kind: Service
metadata:
  name: eks-olive-components
  namespace: dev
  annotations:
    prometheus.io/probe: "true"
    prometheus.io/path: "/api/health/status"
spec:
  ports:
    - protocol: TCP
      port: 80
  selector:
    app: eks-olive-components

---
apiVersion: extensions/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
  name: eks-olive-components
  namespace: dev
spec:
  tls:
  - hosts:
    - ui-guidedev.oliveai.com
    secretName: oliveai-certs
  - hosts:
    - ui-guide.oliveai.com
    secretName: oliveai-certs
  - hosts:
    - uiguidedev.oliveai.com
    secretName: oliveai-certs
  - hosts:
    - uiguide.oliveai.com
    secretName: oliveai-certs
  - hosts:
    - uiguide.dev.crosschx.com
    secretName: dev-certs
  - hosts:
    - ui-guide.dev.crosschx.com
    secretName: dev-certs
  rules:
  - host: ui-guidedev.oliveai.com
    http:
      paths:
      - path: /
        backend:
          serviceName: eks-olive-components
          servicePort: 80
  - host: ui-guide.oliveai.com
    http:
      paths:
      - path: /
        backend:
          serviceName: eks-olive-components
          servicePort: 80
  - host: uiguidedev.oliveai.com
    http:
      paths:
      - path: /
        backend:
          serviceName: eks-olive-components
          servicePort: 80
  - host: uiguide.oliveai.com
    http:
      paths:
      - path: /
        backend:
          serviceName: eks-olive-components
          servicePort: 80
  - host: uiguide.dev.crosschx.com
    http:
      paths:
      - path: /
        backend:
          serviceName: eks-olive-components
          servicePort: 80
  - host: ui-guide.dev.crosschx.com
    http:
      paths:
      - path: /
        backend:
          serviceName: eks-olive-components
          servicePort: 80
